--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,3 +1,5 @@
 
-@import '_bootstrap-variables.scss';
-@import '_bootstrap.scss'
+@import 'bootstrap-variables';
+@import 'bootstrap';
+@import 'header';
+@import 'main';
