--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,5 +1,6 @@
 
-@import 'bootstrap-variables';
-@import 'bootstrap';
+@import 'variables';
+@import 'mixins';
+@import 'base';
 @import 'header';
 @import 'main';
