--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -1,3 +1,27 @@
+.slider {
+  position: fixed;
+  top: -100px;
+  left: 0;
+  width: 100%;
+  transition: .5s;
+
+  &.visible {
+    top: 0;
+    transition: .5s;
+  }
+
+  .slider-text {
+    @extend .center-flex;
+    align-items: center;
+    background-color: #fff;
+    border-bottom: 2px solid $primary;
+  }
+
+  a {
+    padding-left: $padding-small-horizontal;
+  }
+}
+
 main {
   max-width: 1280px;
   margin: 30rem auto;
