--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -1,12 +1,13 @@
 .slider {
   position: fixed;
-  top: -100px;
+  top: 0;
+  margin-top: -100px;
   left: 0;
   width: 100%;
   transition: .5s;
 
   &.visible {
-    top: 0;
+    margin-top: 0;
     transition: .5s;
   }
 
