--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -1,8 +1,7 @@
 .header {
-  background-image:
-    linear-gradient(trans(0.2), trans(0.2)),
-    url('img/background.jpg');
-  
+  background-image: linear-gradient(trans(0.2), trans(0.2)),
+    url("img/background.jpg");
+
   background-size: cover;
   position: fixed;
   top: 0;
@@ -13,26 +12,29 @@
 
   .header-text {
     padding: 10rem 0;
-    background-image:
-      radial-gradient(trans(0.7) 25%, trans(0) 85%);
- 
+    background-image: radial-gradient(trans(0.7) 25%, trans(0) 85%);
+
     @media (max-width: $small-screen) {
-      background-image:
-        linear-gradient(trans(0) 10%, trans(0.7) 45%, trans(0.7) 65%, trans(0) 90%);
+      background-image: linear-gradient(
+        trans(0) 10%,
+        trans(0.7) 45%,
+        trans(0.7) 65%,
+        trans(0) 90%
+      );
     }
   }
-  
-  h1, p {
+
+  h1,
+  p {
     @extend .center-text;
   }
-  
+
   .social {
     @extend .center-flex;
 
     a {
       @extend .small-padding;
-      background-image:
-      radial-gradient(trans(0.2) 10%, trans(0) 80%);
+      background-image: radial-gradient(trans(0.2) 10%, trans(0) 80%);
     }
   }
 }
